# uvec

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  vector.h
docs/: CMakeLists.txt
include/: uvec.h  vector.h
test/: .gitignore  CMakeLists.txt  Makefile  test.c
