# Files and directories

set(README_FILE "../README.md")
get_target_property(HEADERS uvec INTERFACE_SOURCES)

# Doxygen configuration

set(DOXYGEN_FULL_PATH_NAMES NO)
set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
set(DOXYGEN_OPTIMIZE_OUTPUT_FOR_C YES)
set(DOXYGEN_TOC_INCLUDE_HEADINGS 0)
set(DOXYGEN_DISTRIBUTE_GROUP_DOC YES)
set(DOXYGEN_TYPEDEF_HIDES_STRUCT YES)
set(DOXYGEN_FORCE_LOCAL_INCLUDES YES)
set(DOXYGEN_MAX_INITIALIZER_LINES 0)
set(DOXYGEN_WARN_NO_PARAMDOC YES)
set(DOXYGEN_EXCLUDE_SYMBOLS "__*")
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "${README_FILE}")
set(DOXYGEN_ALPHABETICAL_INDEX NO)
set(DOXYGEN_IGNORE_PREFIX "UVEC_" "uvec_")
set(DOXYGEN_MACRO_EXPANSION YES)
set(DOXYGEN_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")

# Documentation target

find_package(Doxygen)

if(DOXYGEN_FOUND)
    doxygen_add_docs(uvec-docs "${README_FILE}" ${HEADERS}
                     COMMENT "Generate documentation")
endif()
